--- a/website/html/style.css
+++ b/website/html/style.css
@@ -47,9 +47,19 @@ figcaption{
     font-style: italic;
 }
 button{
-    background-color: crimson;
+    background-color: #db360d;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 
 }
 button:hover{
     cursor: pointer;
+    
 }
