--- a/website/html/style.css
+++ b/website/html/style.css
@@ -48,7 +48,7 @@ figcaption{
 }
 button{
     background-color: #db360d;
-    border: none;
+    border: 2px solid #000000;
     color: white;
     padding: 15px 32px;
     text-align: center;
