--- a/website/html/style.css
+++ b/website/html/style.css
@@ -1,4 +1,8 @@
-
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
 
 body{
     font-size: 20px;
@@ -7,49 +11,167 @@ body{
 header{
     height: 80px;
     background: black;
+    position: relative;
 }
+.engels > img{
+    width:80px;
+    max-height: 80px;
+    position: absolute;
+    top: 15px ;
+    right: 25px;
+    
+}
+.nederlands > img{
+    width: 80px;
+    max-height: 60px;
+    position: absolute;
+    top: 13px;
+    right: 150px;
+}
+nav{
+    width: 60vw;
+    height:100%;
+    margin:0 auto;
+    margin-top: -102px;
+}
+
+nav > ul {
+    list-style: none;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    height:100%;
+    justify-content: space-evenly;
+    gap: 2rem;
+    padding-left:40px;
+}
+
+nav > ul > li{
+    width:100%;
+    height:100%;
+}
+
+nav > ul > li > a{
+    width:100%;
+    height:100%;
+    display:block;
+    line-height: 60px;
+    text-align: center;
+}
+
+nav > ul > li > a:visited, nav > ul > li > a:link{
+    color: white;
+    text-decoration: none;
+}
+nav > ul > .active{
+    background:red;
+}
+
 .logomusuem{
     width: 400px;
     display: flex;
+    padding-left: 30px;
+    padding-top: 4px;
     
 }
 .footer{
-    height: 120px;
+    height: 100px;
     background: black;
     display: flex;
     color: white;
-    align-items: flex-start;
     justify-content: space-between;
     letter-spacing: 2px;
-    font-size: 10px;
-   
-    
+    font-size: 15px;
+    width: 100vw;
+}
 
-}
+
 .footerOpeningTijden{
-    padding-left: 60px;
+    padding-left: 20px;
+    gap: 20px;
+    width: 500px;
 }
+
+.tijden{
+    text-align: center;
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.ma-vr
+{
+    float: left;
+}
+
+.za-zo
+{
+    float: right;
+}
+
 .footerLocatie{
     padding-right: 60px;
 }
-article{
+.box1{
+    height: 1000px;
+    width: 100vw;
+}
+.box2{
+    height: 800px;
+    width: 100vw;
+}
 
+.gamebox{
+    width: 400px;
+    height: 400px;
+    border: solid black 1px;
+    position: absolute;
+    top: 300px;
+    left: 300px;
+}
+.watIsErTeDoen{
+    width: 600px;
+    height: 400px;
+    padding: 40px;
+    background: rgba(211, 211, 211, 0.6);
+    position: absolute;
+    right: 200px;
+    top: 300px;
+    border: solid black 1px;
+    border-radius: 50px;
+}
+.geschiedenis{
+    width: 600px;
+    height: 400px;
+    padding: 40px;
+    background: rgba(211, 211, 211, 0.6);
+    border: solid black 1px;
+    border-radius: 50px;
+    float: left;
+    margin-top: 200px;
+    margin-left: 200px;
+}
+.reviews{
+    width: 600px;
+    height: 400px;
+    padding: 40px;
+    background: rgba(211, 211, 211, 0.6);
+    border: solid black 1px;
+    border-radius: 50px;
+    float: right;
+    margin-top: 200px;
+    margin-right: 200px;
 }
 
 main{
-    min-height: 100vh; 
+    
     margin: 0 auto;
-    max-width:60vw;
+    max-width:100vw;
 }
 
 
 
 
-h1{
-    font-size: 250%;
-    margin-bottom: 10px;
-    border-bottom: 1px solid black;
-}
+
 
 figure{
     margin-bottom: 40px;
@@ -64,6 +186,7 @@ figcaption{
     font-size: 80%;
     font-style: italic;
 }
+
 button{
     background-color: #db360d;
     border: 2px solid #000000;
