--- a/website/html/style.css
+++ b/website/html/style.css
@@ -1,80 +1,87 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     font-size: 20px;
     font-family: sans-serif;
 }
-header{
+
+header {
     height: 80px;
     background: black;
     position: relative;
 }
-.engels > img{
-    width:80px;
+
+.engels>img {
+    width: 80px;
     max-height: 80px;
     position: absolute;
-    top: 15px ;
+    top: 15px;
     right: 25px;
-    
+
 }
-.nederlands > img{
+
+.nederlands>img {
     width: 80px;
     max-height: 60px;
     position: absolute;
     top: 13px;
     right: 150px;
 }
-nav{
+
+nav {
     width: 60vw;
-    height:100%;
-    margin:0 auto;
+    height: 100%;
+    margin: 0 auto;
     margin-top: -102px;
 }
 
-nav > ul {
+nav>ul {
     list-style: none;
-    display:flex;
+    display: flex;
     flex-direction: row;
     align-items: center;
-    height:100%;
+    height: 100%;
     justify-content: space-evenly;
     gap: 2rem;
-    padding-left:40px;
+    padding-left: 40px;
 }
 
-nav > ul > li{
-    width:100%;
-    height:100%;
+nav>ul>li {
+    width: 100%;
+    height: 100%;
 }
 
-nav > ul > li > a{
-    width:100%;
-    height:100%;
-    display:block;
+nav>ul>li>a {
+    width: 100%;
+    height: 100%;
+    display: block;
     line-height: 60px;
     text-align: center;
 }
 
-nav > ul > li > a:visited, nav > ul > li > a:link{
+nav>ul>li>a:visited,
+nav>ul>li>a:link {
     color: white;
     text-decoration: none;
 }
-nav > ul > .active{
-    background:red;
+
+nav>ul>.active {
+    background: red;
 }
 
-.logomusuem{
+.logomusuem {
     width: 400px;
     display: flex;
     padding-left: 30px;
     padding-top: 4px;
-    
+
 }
-.footer{
+
+.footer {
     height: 100px;
     background: black;
     display: flex;
@@ -86,41 +93,41 @@ nav > ul > .active{
 }
 
 
-.footerOpeningTijden{
+.footerOpeningTijden {
     padding-left: 20px;
     gap: 20px;
     width: 500px;
 }
 
-.tijden{
+.tijden {
     text-align: center;
     font-size: 20px;
     padding-bottom: 10px;
 }
 
-.ma-vr
-{
+.ma-vr {
     float: left;
 }
 
-.za-zo
-{
+.za-zo {
     float: right;
 }
 
-.footerLocatie{
+.footerLocatie {
     padding-right: 60px;
 }
-.box1{
+
+.box1 {
     height: 1000px;
     width: 100vw;
 }
-.box2{
+
+.box2 {
     height: 800px;
     width: 100vw;
 }
 
-.gamebox{
+.gamebox {
     width: 400px;
     height: 400px;
     border: solid black 1px;
@@ -128,7 +135,8 @@ nav > ul > .active{
     top: 300px;
     left: 300px;
 }
-.watIsErTeDoen{
+
+.watIsErTeDoen {
     width: 600px;
     height: 400px;
     padding: 40px;
@@ -139,7 +147,8 @@ nav > ul > .active{
     border: solid black 1px;
     border-radius: 50px;
 }
-.geschiedenis{
+
+.geschiedenis {
     width: 600px;
     height: 400px;
     padding: 40px;
@@ -150,7 +159,8 @@ nav > ul > .active{
     margin-top: 200px;
     margin-left: 200px;
 }
-.reviews{
+
+.reviews {
     width: 600px;
     height: 400px;
     padding: 40px;
@@ -162,10 +172,10 @@ nav > ul > .active{
     margin-right: 200px;
 }
 
-main{
-    
+main {
+
     margin: 0 auto;
-    max-width:100vw;
+    max-width: 100vw;
 }
 
 
@@ -173,21 +183,22 @@ main{
 
 
 
-figure{
+figure {
     margin-bottom: 40px;
 }
-img{
+
+img {
     width: 25%;
     border-radius: 5px;
     transition: 0.2s transform;
 }
 
-figcaption{
+figcaption {
     font-size: 80%;
     font-style: italic;
 }
 
-button{
+button {
     background-color: #db360d;
     border: 2px solid #000000;
     color: white;
@@ -200,10 +211,57 @@ button{
     cursor: pointer;
 
 }
-button:hover{
+
+button:hover {
     cursor: pointer;
-    
+
 }
 
 
-/* image slider */ 
+/* image slider */
+
+.slider-container {
+    width: 600px;
+    height: 400px;
+    position: relative;
+}
+
+.slider-image-container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+}
+
+.slider-image {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.slider-image.active {
+    opacity: 1;
+}
+
+.slider-nav {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+}
+
+.slider-nav-button {
+    background-color: #000;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+.slider-nav-button:hover {
+    cursor: pointer;
+}
