--- a/website/html/style.css
+++ b/website/html/style.css
@@ -228,6 +228,43 @@ img {
     border-radius: 5px;
     transition: 0.2s transform;
 }
+.socialLogoIS{
+    max-width: 40px;
+    max-height: 40px;
+    border-radius: 90px;
+    position: absolute;
+    left: 400px;
+    top: 550px;
+    background-color: black;
+}
+.socialLogoYT{
+     max-width: 40px;
+    max-height: 40px;
+    border-radius: 90px;
+    position: absolute;
+    left: 600px;
+    top: 550px;
+    background-color: black;
+    
+}
+.socialLogoFB{
+    max-width: 40px;
+    max-height: 40px;
+    border-radius: 90px;
+    position: absolute;
+    left: 200px;
+    top: 550px;
+    background-color: black;
+}
+.socialLogoFB:hover{
+    cursor: pointer;
+}
+.socialLogoYT:hover{
+    cursor: pointer;
+}
+.socialLogoIS:hover{
+    cursor: pointer;
+}
 
 figcaption {
     font-size: 80%;
@@ -283,6 +320,7 @@ button:hover {
     opacity: 0;
     transition: opacity 1s;
     border-radius: 50px;
+    object-fit: cover;
 }
 
 .slider-image.active {
